Feat: add study missions dto